--- a/index.html
+++ b/index.html
@@ -2,306 +2,289 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Game Admin Panel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GamesLand</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f4f6f9;
+      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      background: #121212;
+      color: #eee;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .light-mode {
+      background: #f2f2f2;
+      color: #000;
     }
 
     .container {
       max-width: 800px;
-      width: 100%;
-      background: #fff;
-      border-radius: 12px;
-      padding: 24px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      box-sizing: border-box;
-      margin-bottom: 20px;
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-      margin-bottom: 24px;
-    }
-
-    .form-group {
-      margin-bottom: 16px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-
-    label {
-      display: block;
-      font-weight: 600;
-      margin-bottom: 6px;
-      color: #555;
-    }
-
-    input,
-    textarea {
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: border-color 0.3s;
-      box-sizing: border-box;
-    }
-
-    input:focus,
-    textarea:focus {
-      border-color: #007bff;
-      outline: none;
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      background-color: #007bff;
-      color: white;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    .game-list {
-      max-width: 800px;
-      width: 100%;
-    }
-
-    .game-card {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 16px;
-      margin-bottom: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
-
-    .game-card h3 {
-      margin: 0 0 8px;
-    }
-
-    .game-card button {
-      width: auto;
-      margin-right: 8px;
-      padding: 8px 12px;
+      margin: auto;
+      padding: 20px;
     }
 
     @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
       .container {
-        padding: 16px;
+        padding: 5px;
       }
+    }
+
+    header, footer {
+      background-color: #333;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .logo-section {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .toggle-section {
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    header img {
+      height: 50px;
+      border-radius: 4px;
+    }
+
+    .controls {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    .controls input {
+      padding: 10px 15px 10px 40px;
+      font-size: 16px;
+      border: none;
+      border-radius: 30px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      outline: none;
+      transition: box-shadow 0.3s ease;
+      width: 100%;
+      max-width: 400px;
+      background: white url('https://www.svgrepo.com/show/80156/search.svg') no-repeat 10px center;
+      background-size: 20px 20px;
+    }
+
+    .controls input:focus {
+      box-shadow: 0 0 0 3px #007bff88;
+    }
+
+    .game-card {
+      background: #1e1e1e;
+      border-radius: 8px;
+      padding: 15px;
+      margin: 10px 0;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display: flex;
+      gap: 20px;
+      align-items: center;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .light-mode .game-card {
+      background: white;
+      color: #000;
+    }
+
+    .game-card img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .game-info {
+      flex: 1;
+    }
+
+    .game-info h3 {
+      margin: 0 0 5px;
+    }
+
+    .pagination {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .pagination button {
+      margin: 0 5px;
+      padding: 5px 10px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background-color: #007bff;
+      color: white;
+      border-radius: 4px;
+    }
+
+    .pagination button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+
+    footer {
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Game Admin Panel</h1>
-    <div class="form-group">
-      <label for="logoUrl">Game Logo URL</label>
-      <input type="text" id="logoUrl" placeholder="https://..." />
+  <header>
+    <div class="logo-section">
+      <img src="https://picsum.photos/100/50" alt="Logo" />
+      <h2>GameLand</h2>
     </div>
-    <div class="form-group">
-      <label for="name">Game Name</label>
-      <input type="text" id="name" />
+    <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
+      &#9790; <!-- Moon by default -->
     </div>
-    <div class="form-group">
-      <label for="version">Game Version</label>
-      <input type="text" id="version" />
-    </div>
-    <div class="form-group">
-      <label for="description">Game Description</label>
-      <textarea id="description" rows="4"></textarea>
-    </div>
-    <div class="form-group">
-      <label for="downloads">Game Downloads</label>
-      <input type="number" id="downloads" />
-    </div>
-    <div class="form-group">
-      <label for="rate">Game Rate</label>
-      <input type="number" id="rate" step="0.1" max="5" min="0" />
-    </div>
-    <div class="form-group">
-      <label for="lockerLink">Game Locker Link</label>
-      <input type="text" id="lockerLink" placeholder="https://..." />
-    </div>
-    <div class="form-group">
-      <label for="modFeatures">Game Mod Features</label>
-      <textarea id="modFeatures" rows="3"></textarea>
-    </div>
-    <div class="form-group">
-      <label for="updateDate">Update Date</label>
-      <input type="text" id="updateDate" placeholder="Apr 02, 2025" />
-    </div>
-    <div class="form-group">
-      <label for="size">Game Size (e.g. 150MB)</label>
-      <input type="text" id="size" />
+  </header>
+
+  <div class="container" id="mainContainer">
+    <div class="controls">
+      <input type="text" id="searchBox" placeholder="Search game titles..." />
     </div>
 
-    <button id="addGameBtn">Add Game</button>
-    <button id="downloadBtn">Download JSON</button>
-    <input type="file" id="uploadJson" accept=".json" style="margin-top: 10px;" />
-    <button onclick="copyJSONToClipboard()">Copy JSON to Clipboard</button>
+    <div id="gamesContainer">Loading...</div>
+    <div class="pagination" id="pagination"></div>
   </div>
 
-  <div class="game-list" id="gameList"></div>
+  <footer>
+    &copy; 2025 GamesLand. All rights reserved.
+  </footer>
 
   <script>
-    let games = JSON.parse(localStorage.getItem("games")) || [];
-    let editIndex = null;
+    const PAGE_SIZE = 10;
+    let currentPage = 1;
+    let allGames = [];
+    let filteredGames = [];
 
-    const fields = ["logoUrl", "name", "version", "description", "downloads", "rate", "lockerLink", "modFeatures", "updateDate", "size"];
+    const body = document.body;
+    const themeToggle = document.getElementById("themeToggle");
 
-    const clearFields = () => {
-      fields.forEach(id => document.getElementById(id).value = "");
-      editIndex = null;
-    };
-
-    const getFieldValues = () => {
-      const data = {};
-      for (let id of fields) {
-        const el = document.getElementById(id);
-        if (!el.value.trim()) {
-          el.style.borderColor = "red";
-          return null;
-        } else {
-          el.style.borderColor = "#ccc";
-          data[id] = el.value.trim();
-        }
-      }
-      return data;
-    };
-
-    const renderGames = () => {
-      const list = document.getElementById("gameList");
-      list.innerHTML = "";
-      games.forEach((game, i) => {
-        const card = document.createElement("div");
-        card.className = "game-card";
-        card.innerHTML = `
-          <h3>${game.name} (${game.version})</h3>
-          <p>${game.description}</p>
-          <button onclick="editGame(${i})">Edit</button>
-          <button onclick="removeGame(${i})">Remove</button>
-        `;
-        list.appendChild(card);
-      });
-    };
-
-    window.editGame = function(index) {
-      const game = games[index];
-      fields.forEach(id => document.getElementById(id).value = game[id]);
-      editIndex = index;
-    };
-
-    window.removeGame = function(index) {
-      games.splice(index, 1);
-      renderGames();
-      saveToLocalStorage();
-    };
-
-    const saveToLocalStorage = () => {
-      localStorage.setItem("games", JSON.stringify(games));
-    };
-
-    const downloadJSON = () => {
-  if (!games.length) {
-    alert("No data to download.");
-    return;
-  }
-
-  const blob = new Blob([JSON.stringify(games, null, 2)], { type: 'application/json' });
-  const a = document.createElement('a');
-  a.href = URL.createObjectURL(blob);
-  a.download = 'games.json';
-  document.body.appendChild(a);
-  a.click();
-  document.body.removeChild(a);
-};
-
-    const uploadJSON = (file) => {
-      const reader = new FileReader();
-      reader.onload = function(event) {
-        try {
-          const result = JSON.parse(event.target.result);
-          if (Array.isArray(result)) {
-            games = result.map(game => ({
-              ...game,
-              id: game.id || Date.now() + Math.random() // ensure every game has id
-            }));
-            saveToLocalStorage();
-            renderGames();
-            alert("Games loaded successfully.");
-          } else {
-            alert("Invalid JSON structure.");
-          }
-        } catch (e) {
-          alert("Error parsing JSON.");
-        }
-      };
-      reader.readAsText(file);
-    };
-
-    document.getElementById("addGameBtn").addEventListener("click", () => {
-      const game = getFieldValues();
-      if (!game) return alert("Please fill out all fields.");
-
-      if (editIndex !== null) {
-        game.id = games[editIndex].id;
-        games[editIndex] = game;
-        editIndex = null;
+    function setTheme(mode) {
+      if (mode === "light") {
+        body.classList.add("light-mode");
+        themeToggle.innerHTML = "&#9728;"; // Sun
       } else {
-        game.id = Date.now();
-        games.push(game);
+        body.classList.remove("light-mode");
+        themeToggle.innerHTML = "&#9790;"; // Moon
       }
+      localStorage.setItem("theme", mode);
+    }
 
-      renderGames();
-      saveToLocalStorage();
-      clearFields();
-    });
+    function toggleDarkMode() {
+      const isLight = body.classList.contains("light-mode");
+      setTheme(isLight ? "dark" : "light");
+    }
 
-    document.getElementById("downloadBtn").addEventListener("click", downloadJSON);
+    // Load saved theme or default to dark
+    const savedTheme = localStorage.getItem("theme") || "dark";
+    setTheme(savedTheme);
 
-    document.getElementById("uploadJson").addEventListener("change", function() {
-      const file = this.files[0];
-      if (file) uploadJSON(file);
-    });
+    function filterGames() {
+      const search = document.getElementById("searchBox").value.toLowerCase();
+      filteredGames = allGames.filter(game =>
+        game.name.toLowerCase().includes(search)
+      );
+      currentPage = 1;
+      renderGamesPage();
+    }
 
-    function copyJSONToClipboard() {
-      if (!games.length) {
-        alert("No games to copy.");
+    document.getElementById("searchBox").addEventListener("input", filterGames);
+
+    function renderGamesPage() {
+      const container = document.getElementById("gamesContainer");
+      container.innerHTML = "";
+
+      const start = (currentPage - 1) * PAGE_SIZE;
+      const end = start + PAGE_SIZE;
+      const pageItems = filteredGames.slice(start, end);
+
+      if (pageItems.length === 0) {
+        container.innerHTML = "<p>No games found.</p>";
+        document.getElementById("pagination").innerHTML = "";
         return;
       }
 
-      const jsonStr = JSON.stringify(games, null, 2);
-      navigator.clipboard.writeText(jsonStr).then(() => {
-        alert("JSON copied to clipboard!");
-      }).catch(err => {
-        alert("Failed to copy JSON. Try a modern browser.");
-        console.error(err);
+      pageItems.forEach(game => {
+        const card = document.createElement("div");
+        card.className = "game-card";
+        card.innerHTML = `
+          <img src="${game.logoUrl}" alt="${game.name} logo">
+          <div class="game-info">
+            <h3>${game.name} (v${game.version})</h3>
+            <p>${game.description}</p>
+            <p><strong>Downloads:</strong> ${game.downloads} | <strong>Rating:</strong> ${game.rate}</p>
+            <p><strong>Size:</strong> ${game.size} | <strong>Updated:</strong> ${game.updateDate}</p>
+            <p><strong>Features:</strong> ${game.modFeatures}</p>
+          </div>
+        `;
+        container.appendChild(card);
       });
+
+      renderPagination();
     }
 
-    renderGames();
+    function scrollToTop() {
+      const container = document.getElementById("mainContainer");
+      container.scrollIntoView({ behavior: 'smooth' });
+    }
+
+    function renderPagination() {
+      const pagination = document.getElementById("pagination");
+      pagination.innerHTML = "";
+
+      const totalPages = Math.ceil(filteredGames.length / PAGE_SIZE);
+
+      const prevBtn = document.createElement("button");
+      prevBtn.textContent = "Previous";
+      prevBtn.disabled = currentPage === 1;
+      prevBtn.onclick = () => {
+        currentPage--;
+        renderGamesPage();
+        scrollToTop();
+      };
+
+      const nextBtn = document.createElement("button");
+      nextBtn.textContent = "Next";
+      nextBtn.disabled = currentPage === totalPages;
+      nextBtn.onclick = () => {
+        currentPage++;
+        renderGamesPage();
+        scrollToTop();
+      };
+
+      pagination.appendChild(prevBtn);
+      pagination.appendChild(document.createTextNode(` Page ${currentPage} of ${totalPages} `));
+      pagination.appendChild(nextBtn);
+    }
+
+    fetch("https://api.jsonbin.io/v3/b/68234c858561e97a50131282", {
+      headers: {
+        "X-Access-Key": "$2a$10$gSgfYlP3hTZUvhD66Vr0ReHzaQdcR/c0oi9rzQeM7/xDQb0pYfen2"
+      }
+    })
+    .then(response => response.json())
+    .then(data => {
+      allGames = data.record;
+      filteredGames = [...allGames];
+      renderGamesPage();
+    })
+    .catch(error => {
+      console.error("Error loading data:", error);
+      document.getElementById("gamesContainer").innerText = "Failed to load data.";
+    });
   </script>
 </body>
 </html>
