--- a/index.html
+++ b/index.html
@@ -83,39 +83,40 @@ header{position: relative;}
   100% { transform: rotate(360deg); }
 }
     .controls {
-      display: flex;
+     // display: flex;
       justify-content: center;
-      margin: 20px 0;
+      margin: 20px auto;
       position: relative;
+     // background: red;
+      border: none;
+      border-radius: 30px;
+      width: 95℅;
+      max-width: 400px;
     }
 
     .controls input {
-      padding: 10px 15px 10px 40px;
+      padding: 10px 5px 10px 40px;
+      //margin-left: 26px;
       font-size: 16px;
       border: none;
       border-radius: 30px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       outline: none;
       transition: box-shadow 0.3s ease;
-      width: 100%;
+      width: 88%;
       max-width: 400px;
-      background: white;
+     background: white;
       color: black;
     }
     .controls svg {
       position: absolute;
-      left: calc(50% - 230px + 15px);
+      left: 10px;
       top: 50%;
       transform: translateY(-50%);
       width: 20px;
       height: 20px;
       fill: #555;
     }
-@media (max-width: 768px) {
-  .controls svg {
-    left: calc(50% - 200px + 15px);
-  }
-}
     .controls input:focus {
       box-shadow: 0 0 0 3px #007bff88;
     }
@@ -123,12 +124,12 @@ header{position: relative;}
     .game-card {
       background: #1e1e1e;
       border-radius: 8px;
-      padding: 15px;
+      padding: 10px;
       margin: 10px 0;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       display: flex;
-      gap: 20px;
-      align-items: center;
+      gap: 15px;
+      align-items: flex-start;
       transition: background 0.3s, color 0.3s;
     }
 
@@ -138,21 +139,22 @@ header{position: relative;}
     }
 
     .game-card img {
-      width: 150px;
-      height: 150px;
+      width: 170px;
+      height: 170px;
+      margin-right: 2px;
       object-fit: cover;
       border-radius: 8px;
     }
 
     .game-info {
-      flex: 1;
-    }
+     flex: 1;
+       }
 
     .game-info h3 {
       font-family: 'Orbitron', Sans-Serif;
       margin: 0 0 5px;
     }
-
+ .game-info p{display: flex;align-items:center;gap:8px;}
     .pagination {
       display: flex;
       justify-content: center;
@@ -210,7 +212,7 @@ header{position: relative;}
   align-items: center;
   justify-content: center;
   font-family: 'Orbitron', sans-serif;
-  font-size: 32px;
+  font-size: 20px;
 
   /* allow scrolling if it overflows */
   overflow: auto;
@@ -333,7 +335,7 @@ header{position: relative;}
 </svg> v.${game.version}</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
   <path d="M5 20h14v-2H5v2zm7-18v12l5-5h-3V4h-4v5H7l5 5z"/>
-</svg> ${game.downloads} | <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
+</svg> ${game.downloads} <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
   <path d="M12 2l3.1 6.3 6.9 1-5 4.9 1.2 6.8-6.2-3.3-6.2 3.3 1.2-6.8-5-4.9 6.9-1z"/>
 </svg> ${game.rate}</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
@@ -350,8 +352,8 @@ header{position: relative;}
       <div style="text-align:center; max-width:400px; margin:0 auto;">
         <img src="${selected.logoUrl}"
              alt="${selected.name} logo"
-             style="width:100%; height:auto; border-radius:8px;"/>
-        <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2>
+             style="width:100%;max-width:260px; height:auto; border-radius:8px;"/>
+        <h3 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h3>
         <p><strong>Version:</strong> ${selected.version}</p>
         <p><strong>Size:</strong> ${selected.size || 'N/A'}</p>
         <p><strong>Last Updated:</strong> ${selected.updateDate}</p>
