--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ header{position: relative;}
       margin: 0 0 5px;
     }
  .game-info p{display: flex;align-items:center;gap:8px;}
+ .game-info svg{fill: #ccc}
+ .light-mode .game-info svg{fill:black;}
     .pagination {
       display: flex;
       justify-content: center;
@@ -211,13 +213,30 @@ header{position: relative;}
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Orbitron', sans-serif;
   font-size: 20px;
-
   /* allow scrolling if it overflows */
   overflow: auto;
   padding: 20px;
   box-sizing: border-box;
+}
+.modal-content h3{font-family: 'Orbitron',Sans-Serif}
+.dw-button{
+  background: linear-gradient(135deg, #d4fc79, #96e6a1); /* yellow-green gradient */
+  color: #000;
+  width: 200px;
+  padding: 15px 24px;
+  border: none;
+  border-radius: 25px;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.green-yellow-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+
 }
   </style>
 </head>
@@ -251,7 +270,7 @@ header{position: relative;}
       <div class="pagination" id="pagination"></div>
     </div>
 
-    <footer><span>&copy; 2025 GamesLand. All rights reserved.</span></footer>
+    <footer><span>&copy; 2025 GamesLand. All rights reserved. v.1.0</span></footer>
     <!-- Modal overlay -->
 <div id="cardModal" class="modal">
   <div class="modal-header">
@@ -330,15 +349,15 @@ header{position: relative;}
           <img src="${game.logoUrl}" alt="${game.name} logo">
           <div class="game-info">
             <h3>${game.name}</h3>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
+            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
   <path d="M7 3h10v2H7zM7 19h10v2H7zM4 8h16v8H4zM12 10h2v4h-2zM12 14h2v2h-2z"/>
-</svg> v.${game.version}</p>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
+</svg> ${game.version}</p>
+            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
   <path d="M5 20h14v-2H5v2zm7-18v12l5-5h-3V4h-4v5H7l5 5z"/>
-</svg> ${game.downloads} <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
+</svg> ${game.downloads} <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
   <path d="M12 2l3.1 6.3 6.9 1-5 4.9 1.2 6.8-6.2-3.3-6.2 3.3 1.2-6.8-5-4.9 6.9-1z"/>
 </svg> ${game.rate}</p>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="black">
+            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
   <path d="M12 2c5.5 0 10 4.5 10 10S17.5 22 12 22 2 17.5 2 12 6.5 2 12 2zm0 18c4.4 0 8-3.6 8-8S16.4 4 12 4 4 7.6 4 12s3.6 8 8 8zm-1-13h2v6l4 2-1 2-5-2V7z"/>
 </svg> ${game.updateDate}</p>
           </div>
@@ -349,14 +368,15 @@ header{position: relative;}
     const selected = allGames.find(g => g.id === game.id);
     // build modal inner HTML
     document.getElementById('modalContent').innerHTML = `
-      <div style="text-align:center; max-width:400px; margin:0 auto;">
+      <div style="text-align:center; max-width:300px; margin:0 auto;">
         <img src="${selected.logoUrl}"
              alt="${selected.name} logo"
-             style="width:100%;max-width:260px; height:auto; border-radius:8px;"/>
+             style="width:100%;height:100%;max-height:300px; border-radius:8px;"/>
         <h3 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h3>
         <p><strong>Version:</strong> ${selected.version}</p>
         <p><strong>Size:</strong> ${selected.size || 'N/A'}</p>
         <p><strong>Last Updated:</strong> ${selected.updateDate}</p>
+        <br/><p>${selected.description}</p><br/><button class="dw-button" onclick="window.open('${selected.lockerLink}', '_blank')">Download</button><br/><br/>
       </div>
     `;
     // show modal
