--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>GamesLand</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <style>
+  html {
+  scroll-behavior: smooth;
+}
     body {
       font-family: 'Roboto', sans-serif;
       margin: 0;
@@ -120,7 +123,26 @@ header{position: relative;}
     .controls input:focus {
       box-shadow: 0 0 0 3px #007bff88;
     }
+.scroll-link {
+    display: block;
+    width: 120px;
+    background-color: #00e5ff;
+    color: #111;
+    padding: 12px 20px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 0.6rem;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 229, 255, 0.3);
+  }
 
+  .scroll-link:hover {
+    background-color: #00b8cc;
+    color: #fff;
+  }
     .game-card {
       background: #1e1e1e;
       border-radius: 8px;
@@ -178,7 +200,49 @@ header{position: relative;}
       background-color: #ccc;
       cursor: not-allowed;
     }
+/* ######### how it works ##########*/
+#how-it-works {
+      max-width: 800px;
+      margin: auto;
+    }
 
+    #how-it-works h3 {
+      font-size: 1.4em;
+      margin: 15px;
+    }
+
+    .steps {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* 2x2 layout always */
+      gap: 0px;
+    }
+
+    .step {
+      background-color: #1e1e1e;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      margin: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: background 0.3s, color 0.3s;
+    }
+.light-mode .step{background-color: white}
+    .step-icon {
+      font-size: 2em;
+      margin-bottom: 10px;
+      color: #00e5ff;
+    }
+
+    .step h4 {
+      font-size: 1.2em;
+      margin-bottom: 10px;
+    }
+
+    .step p {
+      font-size: 0.95em;
+      color: #ccc;
+    }
+  .light-mode .step p{color:#1e1e1e}
     footer {
   text-align: center;
   margin-top: 40px;
@@ -211,7 +275,7 @@ header{position: relative;}
 .modal-content {
   flex: 1;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   font-size: 20px;
   /* allow scrolling if it overflows */
@@ -263,14 +327,38 @@ header{position: relative;}
         </svg>
         <input type="text" id="searchBox" placeholder="Search for a game..." />
       </div>
-
+<a class="scroll-link" href="#how-it-works">How It Works</a>
       <div id="gamesContainer">
   <div class="loader"></div>
 </div>
       <div class="pagination" id="pagination"></div>
     </div>
-
-    <footer><span>&copy; 2025 GamesLand. All rights reserved. v.1.0</span></footer>
+ <div id="how-it-works">
+    <h3>How It Works</h3>
+    <div class="steps">
+      <div class="step">
+        <div class="step-icon">🔍</div>
+        <h4>Find Your Game</h4>
+        <p>Browse our collection of modded games or search for what you want.</p>
+      </div>
+      <div class="step">
+        <div class="step-icon">⬇️</div>
+        <h4>Complete Offer</h4>
+        <p>Complete a quick offer (less than 1 minute) to unlock the download.</p>
+      </div>
+      <div class="step">
+        <div class="step-icon">📱</div>
+        <h4>Download & Install</h4>
+        <p>Get your download link and install the game with our instructions.</p>
+      </div>
+      <div class="step">
+        <div class="step-icon">🎮</div>
+        <h4>Enjoy Premium</h4>
+        <p>Play with all premium features unlocked - unlimited money, no ads!</p>
+      </div>
+    </div>
+  </div>
+    <footer><span>&copy; 2025 GamesLand. All rights reserved. v1.0</span></footer>
     <!-- Modal overlay -->
 <div id="cardModal" class="modal">
   <div class="modal-header">
@@ -371,12 +459,12 @@ header{position: relative;}
       <div style="text-align:center; max-width:300px; margin:0 auto;">
         <img src="${selected.logoUrl}"
              alt="${selected.name} logo"
-             style="width:100%;height:100%;max-height:300px; border-radius:8px;"/>
-        <h3 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h3>
+             style="margin-top:10px;width:100%;height:100%;max-height:300px; border-radius:8px;"/>
+        <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2>
         <p><strong>Version:</strong> ${selected.version}</p>
         <p><strong>Size:</strong> ${selected.size || 'N/A'}</p>
         <p><strong>Last Updated:</strong> ${selected.updateDate}</p>
-        <br/><p>${selected.description}</p><br/><button class="dw-button" onclick="window.open('${selected.lockerLink}', '_blank')">Download</button><br/><br/>
+        <br/><h4>About Game:</h4><p>${selected.description}</p><h4>Mod Features:</h4><p>${selected.modFeatures}</p><br/><button class="dw-button" onclick="window.open('${selected.lockerLink}')">Download</button><br/><br/>
       </div>
     `;
     // show modal
