--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@ header{position: relative;}
       gap: 10px;
     
     }
-    .logo-section h2{
-      font-family: 'Orbitron', Sans-Serif;
+    .logo-section img{
+     // background:red;
+      padding: 0px;
       margin: 0;
+      scale: 1.1;
     }
     .toggle-section {
       font-size: 18px;
@@ -126,7 +128,7 @@ header{position: relative;}
 .scroll-link {
     display: block;
     width: 120px;
-    background-color: #00e5ff;
+    background-color: #bfff00;
     color: #111;
     padding: 12px 20px;
     margin: 0 auto;
@@ -134,14 +136,14 @@ header{position: relative;}
     border-radius: 8px;
     text-decoration: none;
     font-weight: bold;
-    font-size: 0.6rem;
+    font-size: 0.75rem;
     transition: background-color 0.3s ease, color 0.3s ease;
     box-shadow: 0 4px 8px rgba(0, 229, 255, 0.3);
   }
 
   .scroll-link:hover {
-    background-color: #00b8cc;
-    color: #fff;
+    background-color: #7fff00;
+    color: #1e1e1e;
   }
     .game-card {
       background: #1e1e1e;
@@ -309,7 +311,7 @@ header{position: relative;}
     <header>
       <div class="container">
         <div class="logo-section">
-          <img src="https://i.ibb.co/LXM3vPWc/Picsart-25-05-14-15-02-30-628.png" alt="Logo" />
+          <img src="https://i.ibb.co/9HDhFYb8/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
         </div>
         <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
   <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -461,15 +463,16 @@ header{position: relative;}
              alt="${selected.name} logo"
              style="margin-top:10px;width:100%;height:100%;max-height:300px; border-radius:8px;"/>
         <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2>
-        <p><strong>Version:</strong> ${selected.version}</p>
-        <p><strong>Size:</strong> ${selected.size || 'N/A'}</p>
-        <p><strong>Last Updated:</strong> ${selected.updateDate}</p>
-        <br/><h4>About Game:</h4><p>${selected.description}</p><h4>Mod Features:</h4><p>${selected.modFeatures}</p><br/><button class="dw-button" onclick="window.open('${selected.lockerLink}')">Download</button><br/><br/>
+        <p><strong style="color:#bfff00">Version:</strong> ${selected.version}</p>
+        <p><strong style="color:#bfff00">Size:</strong> ${selected.size || 'N/A'}</p>
+        <p><strong style="color:#bfff00">Last Update:</strong> ${selected.updateDate}</p>
+        <br/><h4 style="color:#bfff00">About Game:</h4><p>${selected.description}</p><h4 style="color:#bfff00">Mod Features:</h4><p>${selected.modFeatures}</p><br/><button class="dw-button" onclick="window.open('${selected.lockerLink}')">Download</button><br/><br/>
       </div>
     `;
     // show modal
     document.getElementById('cardModal').style.display = 'flex';
     document.body.style.overflow = 'hidden';
+    history.pushState({ modalOpen: true }, "", "#overview");
   };
         container.appendChild(card);
       });
@@ -484,7 +487,15 @@ header{position: relative;}
 function closeModal() {
   document.getElementById('cardModal').style.display = 'none';
   document.body.style.overflow = 'auto';
+  if (location.hash === "#overview") {
+    history.back(); // Go back to the previous state
+  }
 }
+window.addEventListener("popstate", () => {
+  if (location.hash !== "#overview") {
+    closeModal(); // Only close if we're leaving #overview
+  }
+});
     function renderPagination() {
   const pagination = document.getElementById("pagination");
   pagination.innerHTML = "";
