--- a/index.html
+++ b/index.html
@@ -181,6 +181,24 @@ header{position: relative;}
  .game-info p{display: flex;align-items:center;gap:8px;}
  .game-info svg{fill: #ccc}
  .light-mode .game-info svg{fill:black;}
+ .rating {
+      display: inline-block;
+      position: relative;
+      font-size: 1rem;
+      font-family: Arial, sans-serif;
+      color: #ccc;
+    }
+
+    .rating::before {
+      content: '★★★★★';
+      position: absolute;
+      left: 0;
+      top: 0;
+      color: gold;
+      overflow: hidden;
+      white-space: nowrap;
+      width: var(--rating-width);
+    }
     .pagination {
       display: flex;
       justify-content: center;
@@ -360,7 +378,7 @@ header{position: relative;}
       </div>
     </div>
   </div>
-    <footer><span>&copy; 2025 GamesLand. All rights reserved. v1.0</span></footer>
+    <footer><span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0</span></footer>
     <!-- Modal overlay -->
 <div id="cardModal" class="modal">
   <div class="modal-header">
@@ -375,6 +393,16 @@ header{position: relative;}
     let allGames = [];
     let filteredGames = [];
 
+function getStarRatingHTML(rating) {
+      // Clamp and round to nearest 0.25
+      rating = Math.max(0, Math.min(5, rating));
+      const rounded = Math.round(rating * 4) / 4;
+      const percentage = (rounded / 5) * 100;
+
+      // Return the HTML string with inline CSS variable
+      return `<span class="rating" style="--rating-width: ${percentage}%;">★★★★★</span>`;
+    }
+    
     const body = document.body;
     const themeToggle = document.getElementById("themeToggle");
 
@@ -449,7 +477,7 @@ header{position: relative;}
 </svg> ${game.rate}</p>
             <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
   <path d="M12 2c5.5 0 10 4.5 10 10S17.5 22 12 22 2 17.5 2 12 6.5 2 12 2zm0 18c4.4 0 8-3.6 8-8S16.4 4 12 4 4 7.6 4 12s3.6 8 8 8zm-1-13h2v6l4 2-1 2-5-2V7z"/>
-</svg> ${game.updateDate}</p>
+</svg> ${game.updateDate}</p><span class="rating">${getStarRatingHTML(game.rate)}</span> <span>${game.rate}</span>
           </div>
         `;
         // wire up the real JSON id
@@ -462,7 +490,7 @@ header{position: relative;}
         <img src="${selected.logoUrl}"
              alt="${selected.name} logo"
              style="margin-top:10px;width:100%;height:100%;max-height:300px; border-radius:8px;"/>
-        <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2>
+        <h2 style="margin:10px 0; font-family: 'Orbitron', sans-serif;">${selected.name}</h2><span class="rating">${getStarRatingHTML(game.rate)}</span> <span>${game.rate}</span>
         <p><strong style="color:#bfff00">Version:</strong> ${selected.version}</p>
         <p><strong style="color:#bfff00">Size:</strong> ${selected.size || 'N/A'}</p>
         <p><strong style="color:#bfff00">Last Update:</strong> ${selected.updateDate}</p>
